--- a/server/config/config.json
+++ b/server/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "dev_kong",
+    "password": "qwer1234",
+    "database": "wordle",
+    "host": "43.200.18.7",
     "dialect": "mysql"
   }
 }
